# FlatearthEngine

./: .gitignore  README.md  build-all.bat  build-all.sh  flake.nix  nix-toolchain.cmake  post-build.bat  post-build.sh
engine/: CMakeLists.txt  run.bat  run.sh
engine/src/: Definitions.hpp  Entrypoint.hpp  GameTypes.hpp  definitions.hpp
engine/src/Containers/: DArray.cc  DArray.hpp  SArray.hpp
engine/src/Core/: Application.cc  Application.hpp  Asserts.hpp  Clock.cc  Clock.hpp  Event.cc  Event.hpp  FeMemory.cc  FeMemory.hpp  FeString.cc  FeString.hpp  Input.cc  Input.hpp  Logger.cc  Logger.hpp
engine/src/Math/: FeMath.cc  FeMath.hpp  MathTypes.inl
engine/src/Memory/: LinearAllocator.cc  LinearAllocator.hpp  Utils.hpp
engine/src/Platform/: Platform.hpp  Platform_Linux.cc  Platform_Win32.cc
engine/src/Renderer/: RendererBackend.cc  RendererBackend.hpp  RendererFrontend.cc  RendererFrontend.hpp  RendererTypes.inl
engine/src/Renderer/Vulkan/: VulkanBackend.cc  VulkanBackend.hpp  VulkanBackendAbstract.cc  VulkanDevice.cc  VulkanDevice.hpp  VulkanImage.cc  VulkanImage.hpp  VulkanPlatform.hpp  VulkanRenderpass.cc  VulkanRenderpass.hpp  VulkanSwapchain.cc  VulkanSwapchain.hpp  VulkanTypes.inl  VulkanUtils.cc  VulkanUtils.hpp
engine/src/core/: Logger.cc  Logger.hpp
tests/: CMakeLists.txt  run.bat  run.sh
tests/src/: Expect.hpp  TestManager.cc  TestManager.hpp  main.cc
tests/src/Containers/: DArrayTests.cc  DArrayTests.hpp
tests/src/Memory/: LinearAllocatorTests.cc  LinearAllocatorTests.hpp
testsuite/: CMakeLists.txt  run.bat  run.sh
testsuite/src/: Entrypoint.cc  Game.cc  Game.hpp  main.cc
